<resources>
    <string name="app_name">Weather Watch</string>

    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="forecast_for_5_days">Прогноз на 5 дней</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_or_area">Город или район</string>
    <string name="files_like">Ощущается как:</string>
    <string name="wind">Ветер:</string>
    <string name="pressure">Давление:</string>
    <string name="humid">Влажность:</string>
    <string name="choose_place">Выберите город:</string>

    <string name="temperature">Tемпература:</string>
    <string name="wind_strength">Сила ветра:</string>

    <string name="mm_Hg"> мм рт. ст.</string>
    <string name="hPa">гПа</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="km_h">км/ч</string>
    <string name="m_s">м/с</string>

    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>

    <string name="n_wind">↑ С</string>
    <string name="ne_wind">↗ СВ</string>
    <string name="e_wind">→ В</string>
    <string name="se_wind">↘ ЮВ</string>
    <string name="s_wind">↓ Ю</string>
    <string name="sw_wind">↙ ЮЗ</string>
    <string name="w_wind">← З</string>
    <string name="nw_wind">↖ СЗ</string>



    <string-array name="day_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>