<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SettingsFragment">

    <ImageView
        android:id="@+id/backIcon"
        style="@style/small_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/headerSettings"
        style="@style/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="@+id/backIcon"
        app:layout_constraintStart_toEndOf="@+id/backIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/temperatureConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/celsiusTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/orange"
            android:text="@string/celsius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/temperatureGuideline0.75"
            app:layout_constraintStart_toStartOf="@+id/temperatureGuideline0.5"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/fahrenheitTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_grey"
            android:text="@string/fahrenheit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/temperatureGuideline0.75"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/temperatureGuideline0.75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.75"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/temperatureGuideline0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/windConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureConstraintLayout"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_strength"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/m_sTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/orange"
            android:text="@string/m_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/windGuideline0.75"
            app:layout_constraintStart_toStartOf="@+id/windGuideline0.5"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/km_hTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_grey"
            android:text="@string/km_h"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/windGuideline0.75"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/windGuideline0.75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.75"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/windGuideline0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pressureConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windConstraintLayout"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/mm_HgTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/orange"
            android:text="@string/mm_Hg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pressureGuideline0.75"
            app:layout_constraintStart_toStartOf="@+id/pressureGuideline0.5"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/hPaTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_grey"
            android:text="@string/hPa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pressureGuideline0.75"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/pressureGuideline0.75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.75"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/pressureGuideline0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>