<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".presentation.fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topConstrainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            >

            <ImageView
                android:id="@+id/settingsIcon"
                style="@style/small_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_outline_settings_24" />

            <ImageView
                android:id="@+id/favoritesPlaceIcon"
                style="@style/small_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_menu_24" />

            <TextView
                android:id="@+id/bigPlaceName"
                style="@style/normal_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="bigPlaceName" />

            <TextView
                android:id="@+id/smallPlaceName"
                style="@style/small_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bigPlaceName"
                tools:text="smallPlaceName" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            / >
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataConstrainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="14dp"
            >


            <ImageView
                android:id="@+id/weatherIcon"
                style="@style/big_icon"
                app:layout_constraintBottom_toBottomOf="@+id/degree"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/degree"
                app:srcCompat="@drawable/ic_01d" />

            <TextView
                android:id="@+id/degree"
                style="@style/most_big_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:paddingStart="4dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weatherIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="+15°C" />

            <TextView
                android:id="@+id/description"
                style="@style/small_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/degree"
                tools:text="Облачно" />

            <TextView
                android:id="@+id/filesLikeLabel"
                style="@style/small_text"
                android:layout_marginBottom="32dp"
                android:text="@string/files_like"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/filesLikeValue"
                style="@style/small_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/filesLikeLabel"
                app:layout_constraintTop_toBottomOf="@id/description"
                tools:text="+13°C" />

            <TextView
                android:id="@+id/windLabel"
                style="@style/small_text"
                android:text="@string/wind"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weatherIcon" />

            <TextView
                android:id="@+id/windValue"
                style="@style/small_text"
                app:layout_constraintBottom_toBottomOf="@+id/windLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toEndOf="@+id/windLabel"
                app:layout_constraintTop_toTopOf="@+id/windLabel"
                tools:text="3 m/c" />


            <TextView
                android:id="@+id/pressureLabel"
                style="@style/small_text"
                android:text="@string/pressure"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/windLabel" />

            <TextView
                android:id="@+id/pressureValue"
                style="@style/small_text"
                app:layout_constraintBottom_toBottomOf="@+id/pressureLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pressureLabel"
                app:layout_constraintTop_toTopOf="@+id/pressureLabel"
                tools:text="3 m/c" />

            <TextView
                android:id="@+id/humidLabel"
                style="@style/small_text"
                android:text="@string/humid"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressureLabel" />

            <TextView
                android:id="@+id/humidValue"
                style="@style/small_text"
                app:layout_constraintBottom_toBottomOf="@+id/humidLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toEndOf="@+id/humidLabel"
                app:layout_constraintTop_toTopOf="@+id/humidLabel"
                tools:text="3 m/c" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvForecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_forecast">

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>